--- a/week_05/01_image_gallery/style.css
+++ b/week_05/01_image_gallery/style.css
@@ -1,3 +1,9 @@
+body {
+  margin: 0;
+  padding: 0;
+  background: #333;
+}
+
 .container {
   max-width: 760px;
   margin: auto;
@@ -14,4 +20,15 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 5px;
+}
+
+@keyframes fadeIn {
+  to {
+     opacity: 1;
+  }
+}
+
+.fade-in {
+  opacity: 0;
+  animation: fadeIn 0.5s ease-in forwards;
 }
