--- a/week_06/02_todo/style.css
+++ b/week_06/02_todo/style.css
@@ -6,9 +6,23 @@
 }
 
 @media (prefers-color-scheme: dark) {
-  img, .todoCheck{
+  img{
     filter: invert(1);
   }
+
+  body {
+    background-color: black !important;
+  }
+
+  .todoText, header h1, .extras button {
+    
+    color: white !important;
+  }
+
+  .extras button {
+    background: black !important;
+  }
+
 }
 
 
